--- a/css/scroll/overScroll.html
+++ b/css/scroll/overScroll.html
@@ -56,7 +56,8 @@
         }
         #btn{
             background: #ff0000;
-            margin: 3px auto;
+            margin-left:  auto;
+            margin-right: auto;
             text-align: center;
             width: 80px;
             height: 28px;
@@ -67,6 +68,7 @@
             line-height: 28px;
             cursor: pointer;
             opacity: 0.8;
+            clear: both;
         }
         #btn:hover{
             opacity: 1;
@@ -88,6 +90,7 @@
     </div>
 </div>
 <div id="bottom">
+    <div id="float" style="float: left;height: 50%;margin-bottom: -14px"></div>
     <div id="btn" onclick="doScroll();">显示红色</div>
 </div>
 </body>
