--- a/css/tcc/setCapture.html
+++ b/css/tcc/setCapture.html
@@ -7,57 +7,88 @@
 <body>
 <script type="text/javascript">
     <!--
-    window.onload=function(){
+    window.onload = function () {
         objDiv = document.getElementById('drag');
         drag(objDiv);
     };
 
-    function drag(dv){
-        dv.onmousedown=function(e){
-            var d=document;
+    function drag(dv) {
+        dv.onmousedown = function (e) {
+            var d = document;
             e = e || window.event;
             this.scrollLeft;
 
-            var x= e.layerX || e.offsetX;
-            var y= e.layerY || e.offsetY;
+            var x = e.layerX || e.offsetX;
+            var y = e.layerY || e.offsetY;
 
             //设置捕获范围
-            if(dv.setCapture){
+            if (dv.setCapture) {
                 dv.setCapture();
-            }else if(window.captureEvents){
+            } else if (window.captureEvents) {
                 window.captureEvents(Event.MOUSEMOVE | Event.MOUSEUP);
             }
 
 
-            d.onmousemove=function(e){
-                e= e || window.event;
-                if(!e.pageX)e.pageX=e.clientX;
-                if(!e.pageY)e.pageY=e.clientY;
-                var tx=e.pageX-x;
-                var ty=e.pageY-y;
+            d.onmousemove = function (e) {
+                e = e || window.event;
+                if (!e.pageX)e.pageX = e.clientX;
+                if (!e.pageY)e.pageY = e.clientY;
+                var tx = e.pageX - x;
+                var ty = e.pageY - y;
 
-                dv.style.left=tx+'px';
-                dv.style.top=ty+'px';
+                dv.style.left = tx + 'px';
+                dv.style.top = ty + 'px';
             };
 
-            d.onmouseup=function(){
+            d.onmouseup = function () {
                 //取消捕获范围
-                if(dv.releaseCapture){
+                if (dv.releaseCapture) {
                     dv.releaseCapture();
-                }else if(window.captureEvents){
-                    window.captureEvents(Event.MOUSEMOVE|Event.MOUSEUP);
+                } else if (window.captureEvents) {
+                    window.captureEvents(Event.MOUSEMOVE | Event.MOUSEUP);
                 }
 
                 //清除事件
-                d.onmousemove=null;
-                d.onmouseup=null;
+                d.onmousemove = null;
+                d.onmouseup = null;
             };
         };
     }
     //-->
 </script>
-
-<div id="drag" style="position:absolute;left:12px;top:24px;width:100;height:150;border:1px solid #000000;z-index:1;background:#eeeeee;cursor:move">drag me</div>
-<iframe src="testTemp.html" style="width:600;height: 300"></iframe>
+<style type="text/css">
+    #drag {
+        position: absolute;
+        left: 12px;
+        top: 24px;
+        width: 100px;
+        height: 150px;
+        line-height: 150px;
+        border: 1px solid #000000;
+        z-index: 1;
+        background: #eeeeee;
+        cursor: move;
+        text-align: center;
+    }
+    #inner{
+        width: 50px;
+        height: 50px;
+        background: orange;
+    }
+</style>
+<div id="drag"><div id="inner" onclick="console.log('1');"></div>drag me</div>
+<iframe src="testTemp.html" style="border: 0;width:600px;height: 300px"></iframe>
+<div id="click_wrapper" style="width: 200px;height: 200px;background: orangered">
+    <div id="click_goal" style="width: 100px;height: 100px;background: orange"></div>
+</div>
+<script type="text/javascript">
+    document.getElementById('click_wrapper').attachEvent('onclick',function(e){
+        alert(e.srcElement.id);
+    })
+    document.getElementById('click_goal').attachEvent('onclick',function(e){
+//        e.srcElement.setCapture(true);
+        alert(e.srcElement.id);
+    })
+</script>
 </body>
 </html>
