--- a/PaulGuo-In/in-demo.html
+++ b/PaulGuo-In/in-demo.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title></title>
-	<script type="text/javascript" src="in.js" autoload="true" core="http://t.douban.com/js/jquery.min.js"></script>
+	<title>测试in.js非阻断加载资源</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <script type="text/javascript" src="in.js" autoload="true" core="http://t.douban.com/js/jquery.min.js"></script>
 </head>
 <body>
+    <script type="text/javascript" src="../scripts/common.js"></script>
 	<script type="text/javascript">
 		In.add('jquery',{path:'http://code.jquery.com/jquery-1.5.2.js',type:'js',charset:'utf-8'});
 		In.add('a',{path:'demo-files/a.js',type:'js',charset:'utf-8',rely:['d']});
@@ -17,15 +18,15 @@
 		In.add('g',{path:'demo-files/g.css',rely:['f']});
 		In.add('h',{path:'demo-files/h.css'});
 		
-		In('d','g','a','jquery','e','d','f','d',function() {alert('test1...')},'b',function() {alert('test2...')});
-		In('h',function() {alert('im thread 2...')});
-		In.ready('g','d',function() {alert('I\'m ready.')});
+		In('d','g','a','jquery','e','d','f','d',function() {msgOut.writeln('test1...')},'b',function() {msgOut.writeln('test2...')});
+//		In('h',function() {msgOut.writeln('im thread 2...')});
+//		In.ready('g','d',function() {msgOut.writeln('I\'m ready.')});
 		/*
 			notes:
 			--------------------------------------------------------------------------------------------------------------------------
 			relations: 		d -> g(f) -> a(d) -> jquery -> e(jquery) -> d -> f -> d -> function -> b(c(a(d))) -> function
 			blahlist: 		d -> f -> g -> d -> a -> jquery -> jquery -> e -> d -> f -> d -> function -> d -> a -> c -> b -> function
-			loading list: 	d -> f -> g -> d -> a -> jquery -> e -> function -> c -> b -> function
+			loading list: 	d -> f -> g -> a -> jquery -> e -> function -> c -> b -> function
 		*/
 	</script>
 </body>
