--- a/event/laterAppend.html
+++ b/event/laterAppend.html
@@ -3,20 +3,96 @@
 <head>
     <title></title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
+    <style type="text/css">
+        body {
+            font: 12px;
+        }
+        .dib-wrap {
+            font-size:0;/* 所有浏览器 */
+            *word-spacing:-1px;/* IE6、7 */
+        }
+        .dib-wrap .dib{
+            font-size: 12px;
+            letter-spacing: normal;
+            word-spacing: normal;
+            vertical-align:top;
+        }
+        @media screen and (-webkit-min-device-pixel-ratio:0){
+            /* firefox 中 letter-spacing 会导致脱离普通流的元素水平位移 */
+            .dib-wrap{
+                letter-spacing:-5px;/* Safari 等不支持字体大小为 0 的浏览器, N 根据父级字体调节*/
+            }
+        }
+        .dib {
+            display: inline-block;
+            *display:inline;
+            *zoom:1;
+        }
+    </style>
 </head>
 <body>
-
+<p>测试Js创建页面内容，后绑定事件，再添加到document.body上，绑定的事件是否触发</p>
 </body>
 </html>
 <script type="text/javascript">
+    /**
+     *
+     * @param {number,optional}width
+     * @param {number,optional}height
+     * @returns {{write: Function, writeln: Function, clear: Function}}
+     */
+    function buildConsole(width,height) {
+        var troggle = 1,
+                newDom = document.createElement('div');
+        newDom.setAttribute('id', 'hangDiv');
+        newDom.style.cssText = 'border-radius: 10px;box-shadow: -5px -5px 7px 10px rgb(218, 233, 226);position: fixed;z-index: 10;' +
+                'right: 50px;bottom: 55px;background-color: rgb(218, 233, 226);width: 150px;height: 160px;filter: alpha(Opacity=200);' +
+                'opacity: 1;padding: 10px;overflow: hidden;';
+        width?newDom.style.width = width:'';
+        height?newDom.style.height = height:'';
+        var headHtml = '<div id="hangHead" style="width: 100%;height: 30px;line-height: 30px;border-bottom: 1px solid black;" class="dib-wrap">' +
+                '打印信息<div style="width:16px;height: 16px;float:right;background-image:url(../images/ymPrompt/ico.gif);background-position: left top;" class="dib"></div></div>';
+        //newDom.innerHTML = headHtml;
+        document.body.appendChild(newDom);
+        var doLayout = function () {
+            if (newDom.scrollHeight > newDom.clientHeight) {
+                newDom.scrollTop = newDom.scrollHeight - newDom.clientHeight;
+            }
+        }
+        return {
+            /**
+             *
+             * @param {string}args
+             */
+            write: function (args) {
+                if (troggle) {
+                    troggle--;
+                    newDom.innerHTML += '<span style="color: orangered">' + args + '</span> '; //空格是当args数字时，无法换行而准备
+                } else {
+                    troggle++;
+                    newDom.innerHTML += '<span style="color: brown">' + args + '</span> ';
+                }
+                doLayout();
+            },
+            writeln: function (args) {
+                newDom.innerHTML += args + '<br/>';
+            },
+            clear: function () {
+                newDom.innerHTML = '';
+            }
+
+        }
+    }
+    var outDiv = buildConsole();
     var newDiv = document.createElement('div');
-    newDiv.style.cssText='width:200px;height:200px;background:yellow;';
-    document.addEventListener && newDiv.addEventListener('mouseover',function(e){
-        window.console?(console.log(e.clientX+','+ e.clientY)):alert(e.clientX+','+ e.clientY);
+    newDiv.style.cssText = 'width:200px;height:200px;background:yellow;';
+    document.addEventListener && newDiv.addEventListener('mouseover', function (e) {
+//        window.console?(console.log(e.clientX+','+ e.clientY)):alert(e.clientX+','+ e.clientY);
+        outDiv.write(e.clientX + ',' + e.clientY);
+    }, false);
+    document.attachEvent && newDiv.attachEvent('onmouseover', function (e) {
+//        window.console?(console.log(e.clientX+','+ e.clientY)):alert(e.clientX+','+ e.clientY);
+        outDiv.write(e.clientX + ',' + e.clientY);
     });
-    document.attachEvent && newDiv.attachEvent('onmouseover',function(e){
-        e = e || window.event;
-        window.console?(console.log(e.clientX+','+ e.clientY)):alert(e.clientX+','+ e.clientY);
-    })
     document.body.appendChild(newDiv);
 </script>
