--- a/class/class.html
+++ b/class/class.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title></title>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8">
+    <script type="text/javascript">
+    </script>
 </head>
 <body>
 
