--- a/css/float/floatStatic.html
+++ b/css/float/floatStatic.html
@@ -5,9 +5,9 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <style type="text/css">
         <!--
-        #box{ float:left; width:800px;height:100px;background: #B6C5C2}
-        #left{ float:left; width:50%;height:100px;background: #ccd8ea}
-        #right{ width:50%; height:100px;background: #ff0000;margin-left: 50%;*margin: 0}
+        #box{ float:left; width:800px;height:100px;background: grey}
+        #left{ float:left; width:50%;height:100px;background: #0000ff}
+        #right{ width:50%; height:100px;background: red;margin-left: 50%;*margin: 0}
         *html #left{ margin-right:-3px; /*这句是关键*/}
         -->
     </style>
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div id="box">
-        <div id="left">left is light</div>
+        <div id="left">left is blue</div>
         <div id="right">right is red</div><!--当做环绕理解，chrome背景和left重叠-->
     </div>
 </body>
