--- a/interView/meituan.html
+++ b/interView/meituan.html
@@ -33,29 +33,44 @@
 
         function sortZ(arr1, arr2) {
             var arr3 = [],
-                    begin1 = 0,
-                    begin2 = 0;
+                begin1 = 0,
+                isAdd = false;
             for (var i = 0, len = arr1.length; i < len; i++) {
                 for (var j = begin1, l = arr2.length; j < l; j++) {
+                    if (isAdd && i == len - 1) {
+                        arr3.push(arr2[j]);
+                        continue;
+                    }
                     if (arr1[i] <= arr2[j]) {
                         arr3.push(arr1[i]);
-                        continue;
+                        if (i == len - 1) {
+                            arr3.push(arr2[j]);
+                            isAdd = true;
+                            continue;
+                        }else{
+                            break;
+                        }
                     } else {
                         arr3.push(arr2[j]);
                         begin1++;
+                        continue;
                     }
-                }
-                if(begin1 = l){
 
+                }
+                if (!isAdd && j == l) {
+                    arr3.push(arr1[i]);
                 }
             }
             return arr3;
         }
 
         var rtnArr1 = sortX([1, 3, 4], [5, 6, 7]),
-                rtnArr2 = sortX([1, 2, 3, 4, 5, 8], [2, 3, 4]),
-                rtnArr3 = sortX([5, 6, 7], [2, 3, 4]);
+            rtnArr2 = sortX([1, 2, 3, 4, 5, 8], [2, 3, 4]),
+            rtnArr3 = sortX([5, 6, 7], [2, 3, 4]);
 
+        var rtnArr11 = sortZ([1, 3, 4], [5, 6, 7]),
+                rtnArr22 = sortZ([1, 2, 3, 4, 5, 8], [2, 3, 4]),
+                rtnArr33 = sortZ([5, 6, 7], [2, 3, 4]);
 
     </script>
 </head>
