元素垂直居中方法

--- a/css/middle/fixedMid.html
+++ b/css/middle/fixedMid.html
@@ -4,25 +4,20 @@
     <meta charset="utf-8">
     <title></title>
     <style type="text/css">
-        #wrapper{
-            position: relative;
-            height: 500px;
-        }
         #modal{
             background: #ddaa00;
-            position: absolute;
+            position: fixed;
+            z-index: 100;
             top: 0;left: 0;right: 0;bottom: 0;
             margin: auto;
             width: 50%;
             height: 50%;
-            max-height: 100%;
-            overflow: auto;
         }
     </style>
 </head>
 <body>
-    <div id="wrapper">
-        <div id="modal">absolute method of middle</div>
-    </div>
+<div id="wrapper">
+    <div id="modal">absolute method of middle</div>
+</div>
 </body>
 </html>
