--- a/interView/meituan_2.html
+++ b/interView/meituan_2.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title></title>
-    <script type="text/javascript">
+    <script>
+        /**=======二面、将url解析成对象返回========*/
         var a = '?token=abc&id=123';
         var b = '?name=john&age';
         function parse(str){
