--- a/interView/meituan_3.html
+++ b/interView/meituan_3.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-    <script type="text/javascript">
+    <script>
+        /**=======二面、由节点，构建树========*/
         var inArr = [
             { id: 1, name: 'text1', pid: 0 },
             { id: 2, name: 'text2', pid: 1 },
