--- a/interView/meituan.html
+++ b/interView/meituan.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title></title>
-    <script type="text/javascript">
+    <script>
+        /**=======二面、两个有顺数组，合并成一个有顺数组========*/
+
         function sortX(arr1, arr2) {
             var arr3 = [],
                     begin1 = 0,
@@ -28,6 +31,14 @@
             for (var m = begin2; m < len; m++) {
                 arr3.push(arr1[m]);
             }
+            return arr3;
+        }
+
+        function sortY(arr1,arr2){
+            var arr3 = arr1.concat(arr2);
+            arr3.sort(function(a,b){
+                return a - b;
+            });
             return arr3;
         }
 
