--- a/css/absolute.html
+++ b/css/absolute.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 <div id="top" style="width: 200px;background: #B50000;height: 100px"></div>
-<div id="second" style="width: 200px;background: #000000;height: 100px;position: absolute;margin: 20px 0 0;display: none"></div>
+<div id="second"
+     style="width: 200px;background: #000000;height: 100px;position: absolute;margin: 20px 0 0;display: none"></div>
 <div id="third" style="width: 200px;background: #b2b2b2;height: 120px; position: relative;margin: 10px 5px"> third</div>
 <div>ff</div>
 <div style="width: 100%;margin: 0 20%;height: 100px;background: #008200"></div>
