--- a/effects/setSelectionRange.html
+++ b/effects/setSelectionRange.html
@@ -7,7 +7,8 @@
 <body>
 <input type="text" id="txt" value="abcdefghijklmn"/>
 </body>
-</html>    <script type="text/javascript">
+</html>
+<script type="text/javascript">
     var o = document.getElementById("txt");
     var len = o.value.length;
     o.focus();          //先使光标聚集在输入框中
