--- a/JsPlugins/validator/required.html
+++ b/JsPlugins/validator/required.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>Makes "field" always required. Nothing and blanks are invalid.</title>
     <link rel="stylesheet" href="css/site-demos.css">
-
 </head>
 <body>
+<style>
+    body{
+        font: 14px;
+    }
+</style>
 <form id="myform">
     <label for="field">Required: </label>
     <input type="text" class="left" id="field" name="field">
