--- a/class/simple-inherit.html
+++ b/class/simple-inherit.html
@@ -5,7 +5,8 @@
     <title></title>
     <script type="text/javascript">
 
-        /* Simple JavaScript Inheritance
+        /* @article https://johnresig.com/blog/simple-javascript-inheritance/
+         * Simple JavaScript Inheritance
          * By John Resig http://ejohn.org/
          * MIT Licensed.
          */
@@ -78,9 +79,9 @@
         });
 
         var Ninja = Person.extend({
-            init: function () {
-                this._super(false);
-            },
+//            init: function () {
+//                this._super(false);
+//            },
             dance: function () {
                 // Call the inherited version of dance()
                 return this._super();
@@ -98,8 +99,9 @@
         n.swingSword(); // => true
 
         // Should all be true
-        p instanceof Person && p instanceof Class &&
-                n instanceof Ninja && n instanceof Person && n instanceof Class
+        console.log('instanceof result:')
+        console.log(p instanceof Person && p instanceof Class &&
+                n instanceof Ninja && n instanceof Person && n instanceof Class)
     </script>
 
 </head>
