增强继承和对象的函数

--- a/class/class1.html
+++ b/class/class1.html
@@ -23,7 +23,7 @@
         var r= new Range(1,3);
         console.log(r.includes(2));
         // 可以借鉴下面这种用法
-        r.foreach(alert);
+//        r.foreach(alert);// ok的，但是弹出框太不友好了，先注释掉
         console.log(r.toString());
     </script>
 </head>
