--- a/h5/hairline.html
+++ b/h5/hairline.html
@@ -29,6 +29,7 @@
     border-image: url("https://gw.alicdn.com/tfs/TB17X1NlGagSKJjy0FhXXcrbFXa-6-6.png") 2 repeat;
     border-style: solid;
     height: 80px;
+    border-width: 1px;
   }
 </style>
 
