--- a/h5/hairline.html
+++ b/h5/hairline.html
@@ -11,13 +11,13 @@
 
 <style>
   .border-1 {
-    border: 1px solid #999;
+    border: 1px solid #d0d0d0;
     height: 80px;
     margin: 20px 40px;
   }
 
   .border-2 {
-    border: 0.5px solid #999;
+    border: 0.5px solid #d0d0d0;
     height: 80px;
     margin: 20px 40px;
   }
@@ -26,7 +26,7 @@
   }
   .border-3 {
     margin: 20px 40px;
-    border-image: url("https://gw.alicdn.com/tfs/TB17X1NlGagSKJjy0FhXXcrbFXa-6-6.png") 2 repeat;
+    border-image: url("//gw.alicdn.com/tfs/TB1HRa3nwoQMeJjy0FpXXcTxpXa-6-6.png") 2 repeat;
     border-style: solid;
     height: 80px;
     border-width: 1px;
@@ -41,12 +41,9 @@
 <div class="border-2">
 
 </div>
-使用border-image
-下面并没有解决，下次再试
+采用的border-image是下面的图片预览效果
 <div class="border-3">
 
 </div>
-采用的border-image是下面的图片预览效果
-<img src="https://gw.alicdn.com/tfs/TB1s1mulPihSKJjy0FeXXbJtpXa-515-232.png" alt="">
 </body>
 </html>
